[package]
name = "hcleaner"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"
debug = false
debug-assertions = false
codegen-units = 1

[dependencies]
lazy_static = "1.4.0"
walkdir = "2.3.3"
bitflags = "2.3.3"
indicatif = "0.17.6"
fs_extra = "1.3.0"
alpm = "2.2.3"